--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -19,7 +19,7 @@
 .footer {
     width: 100%;
     height: 100px;
-    border-top: 1px solid #eaeaea;
+    border-top: 1px solid #ea86b6;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -44,6 +44,10 @@
 .title a:focus,
 .title a:active {
     text-decoration: underline;
+}
+
+.footer a {
+    color: #ea86b6;
 }
 
 .title {
